--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </div>
         </div>
         <div class="container_welcome">
-            <p class="welcome">Welcome</p>
+            <h1 class="welcome">Welcome</h1>
             <h1 class="heading_name">BOSCO</h1>
-            <p class="ready">Ready to open</p>
+            <h1 class="ready">Ready to open</h1>
         </div>
     </header>
 
