--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
                     Special attention is paid to the aesthetics of the dish.</p>
             </div>
             <div class="dish_img">
-                <img src="images/dish.png" alt="dish" />
+                <img src="images/dish.png" alt="dish" class="us"/>
             </div>
         </section>
 
@@ -51,30 +51,30 @@
                 <h1 class="heading_menu">Pizza</h1>
                 <ul class="price_list">
                     <li>
-                        <p class="name_price">La Cipolla<span>20$</span></p>
+                        <h3 class="name_price">La Cipolla<span>20$</span></h3>
                         <p class="composition">Thin crust pizza with tomato sauce, Pepperoni sausage, bacon,<br>
                             Mozzarella, bell peppers, olives, onions, mushrooms and ham.</p>
                     </li>
                     <li>
-                        <p class="name_price">Salami<span>19$</span></p>
+                        <h3 class="name_price">Salami<span>19$</span></h3>
                         <p class="composition">Thin crust pizza with tomato sauce, Milano salami and<br>Mozzarella
                             cheese.
                         </p>
                     </li>
                     <li>
-                        <p class="name_price">Pepperoni<span>22$</span></p>
+                        <h3 class="name_price">Pepperoni<span>22$</span></h3>
                         <p class="composition">Thin crust pizza with tomato sauce, Peperoni sausage and<br>Mozzarella.
                         </p>
                     </li>
                     <li>
-                        <p class="name_price">Calzone<span>20$</span></p>
+                        <h3 class="name_price">Calzone<span>20$</span></h3>
                         <p class="composition">Pizza wrapped in an envelope with chicken breast, broccoli,<br>sour
                             cream,
                             red onion and Peperoni
                             sausage.</p>
                     </li>
                     <li>
-                        <p class="name_price">Buffalo<span>23$</span></p>
+                        <h3 class="name_price">Buffalo<span>23$</span></h3>
                         <p class="composition">Pizza with fresh tomato sauce and tender Mozzarella Buffalo.</p>
                     </li>
                 </ul>
@@ -86,31 +86,31 @@
                 <h1 class="heading_menu">Salads</h1>
                 <ul class="price_list">
                     <li>
-                        <p class="name_price">Commander squid salad<span>10$</span></p>
+                        <h3 class="name_price">Commander squid salad<span>10$</span></h3>
                         <p class="composition">With vegetables in a spicy sauce.</p>
                     </li>
                     <li>
-                        <p class="name_price">Grilled Adyghe cheese salad<span>20$</span></p>
+                        <h3 class="name_price">Grilled Adyghe cheese salad<span>20$</span></h3>
                         <p class="composition">With pickled bell peppers, grilled zucchini and<br>
                             tomatoes with lemon-olive dressing.</p>
                     </li>
                     <li>
-                        <p class="name_price">Caesar<span>18$</span></p>
+                        <h3 class="name_price">Caesar<span>18$</span></h3>
                         <p class="composition">With chicken fillet, romano and iceberg lettuce, Caesar sauce,<br>
                             parmesan cheese, garlic croutons, cherry tomatoes and herbs.</p>
                     </li>
                     <li>
-                        <p class="name_price">Greek salad<span>18$</span></p>
+                        <h3 class="name_price">Greek salad<span>18$</span></h3>
                         <p class="composition">Fresh cucumbers, cherry tomatoes, bell peppers, lettuce, olives,<br>
                             feta cheese, boiled egg, herbs dressed with olive oil.</p>
                     </li>
                     <li>
-                        <p class="name_price">Pork salad<span>15$</span></p>
+                        <h3 class="name_price">Pork salad<span>15$</span></h3>
                         <p class="composition">With iceberg lettuce, fresh vegetables, pickled bell pepper, egg,<br>
                             croutons with creamy horseradish sauce.</p>
                     </li>
                     <li>
-                        <p class="name_price">Roasted beef salad<span>19$</span></p>
+                        <h3 class="name_price">Roasted beef salad<span>19$</span></h3>
                         <p class="composition">With bell pepper, lightly salted cucumbers under Asian<br>
                             dressing with tabasco, garlic and coriander.</p>
                     </li>
@@ -130,30 +130,30 @@
                 <span class="line_dish"></span>
                 <ul class="price_list">
                     <li>
-                        <p class="name_price">La Cipolla<span>20$</span></p>
+                        <h3 class="name_price">La Cipolla<span>20$</span></h3>
                         <p class="composition">Thin crust pizza with tomato sauce, Pepperoni sausage, bacon,<br>
                             Mozzarella, bell peppers, olives, onions, mushrooms and ham.</p>
                     </li>
                     <li>
-                        <p class="name_price">Salami<span>19$</span></p>
+                        <h3 class="name_price">Salami<span>19$</span></h3>
                         <p class="composition">Thin crust pizza with tomato sauce, Milano salami and<br>Mozzarella
                             cheese.
                         </p>
                     </li>
                     <li>
-                        <p class="name_price">Pepperoni<span>22$</span></p>
+                        <h3 class="name_price">Pepperoni<span>22$</span></h3>
                         <p class="composition">Thin crust pizza with tomato sauce, Peperoni sausage and<br>Mozzarella.
                         </p>
                     </li>
                     <li>
-                        <p class="name_price">Calzone<span>20$</span></p>
+                        <h3 class="name_price">Calzone<span>20$</span></h3>
                         <p class="composition">Pizza wrapped in an envelope with chicken breast, broccoli,<br>sour
                             cream,
                             red onion and Peperoni
                             sausage.</p>
                     </li>
                     <li>
-                        <p class="name_price">Buffalo<span>23$</span></p>
+                        <h3 class="name_price">Buffalo<span>23$</span></h3>
                         <p class="composition">Pizza with fresh tomato sauce and tender Mozzarella Buffalo.</p>
                     </li>
                 </ul>
@@ -172,25 +172,25 @@
                 <h1 class="heading_menu sauce">Sauces</h1>
                 <ul class="price_list">
                     <li>
-                        <p class="name_price">Hot mustard<span>3$</span></p>
+                        <h3 class="name_price">Hot mustard<span>3$</span></h3>
                     </li>
                     <li>
-                        <p class="name_price">Spicy garlic sauce<span>3$</span></p>
+                        <h3 class="name_price">Spicy garlic sauce<span>3$</span></h3>
                     </li>
                     <li>
-                        <p class="name_price">Chili sauce sweet<span>3$</span></p>
+                        <h3 class="name_price">Chili sauce sweet<span>3$</span></h3>
                     </li>
                     <li>
-                        <p class="name_price">German mustard<span>3$</span></p>
+                        <h3 class="name_price">German mustard<span>3$</span></h3>
                     </li>
                     <li>
-                        <p class="name_price">Barbecue sauce<span>3$</span></p>
+                        <h3 class="name_price">Barbecue sauce<span>3$</span></h3>
                     </li>
                     <li>
-                        <p class="name_price">Creamy horseradish<span>3$</span></p>
+                        <h3 class="name_price">Creamy horseradish<span>3$</span></h3>
                     </li>
                     <li>
-                        <p class="name_price">Wasabi sauce<span>3$</span></p>
+                        <h3 class="name_price">Wasabi sauce<span>3$</span></h3>
                     </li>
                 </ul>
             </div>
@@ -203,87 +203,87 @@
             <h1 class="heading_menu drinks">Drinks</h1>
             <div class="container_coffee_tea">
                 <div class="wrapper_tea_coffee">
-                    <h1 class="coffee_tea">Coffee</h1>
+                    <h2 class="coffee_tea">Coffee</h2>
                     <ul class="price_list">
                         <li>
-                            <p class="name_price">Cappuccino<span>5$</span></p>
+                            <h3 class="name_price">Cappuccino<span>5$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Latte<span>6$</span></p>
+                            <h3 class="name_price">Latte<span>6$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Raf<span>5$</span></p>
+                            <h3 class="name_price">Raf<span>5$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Flat white<span>5$</span></p>
+                            <h3 class="name_price">Flat white<span>5$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Doppio<span>5$</span></p>
+                            <h3 class="name_price">Doppio<span>5$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Irish<span>4$</span></p>
+                            <h3 class="name_price">Irish<span>4$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Coretto<span>6$</span></p>
+                            <h3 class="name_price">Coretto<span>6$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Romano<span>5$</span></p>
+                            <h3 class="name_price">Romano<span>5$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Lungo<span>7$</span></p>
+                            <h3 class="name_price">Lungo<span>7$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Con panna<span>7$</span></p>
+                            <h3 class="name_price">Con panna<span>7$</span></h3>
                         </li>
                     </ul>
                 </div>
                 <div class="wrapper_tea_coffee">
-                    <h1 class="coffee_tea">Tea</h1>
+                    <h2 class="coffee_tea">Tea</h2>
                     <ul class="price_list">
                         <li>
-                            <p class="name_price">Green tea<span>3$</span></p>
+                            <h3 class="name_price">Green tea<span>3$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Black tea<span>3$</span></p>
+                            <h3 class="name_price">Black tea<span>3$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">White tea<span>3$</span></p>
+                            <h3 class="name_price">White tea<span>3$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Yellow tea<span>3$</span></p>
+                            <h3 class="name_price">Yellow tea<span>3$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Oolong tea<span>4$</span></p>
+                            <h3 class="name_price">Oolong tea<span>4$</span></h3>
                         </li>
                         <li>
-                            <p class="name_price">Puer tea<span>5$</span></p>
+                            <h3 class="name_price">Puer tea<span>5$</span></h3>
                         </li>
                     </ul>
                 </div>
             </div>
-            <h1 class="coffee_tea">Coctails</h1>
+            <h2 class="coffee_tea">Coctails</h2>
             <div class="container_coctails">
                 <div class="wrapper_coctails">
                     <ul class="price_list">
                         <li>
-                            <p class="name_price">Mojito<span>10$</span></p>
+                            <h3 class="name_price">Mojito<span>10$</span></h3>
                             <p class="composition">White rum- 50 ml, sugar syrup- 20 ml, soda- 50 ml,<br>
                                 mint- 15 grams,lime - 3 wedgesashed potatoes and<br>
                                 mustard.</p>
                         </li>
                         <li>
-                            <p class="name_price">Pina colada<span>11$</span></p>
+                            <h3 class="name_price">Pina colada<span>11$</span></h3>
                             <p class="composition">White rum- 50 ml, coconut syrup- 30 ml,<br>
                                 pineapple juice - 100 ml</p>
                         </li>
                         <li>
-                            <p class="name_price">Cosmopolitan<span>9$</span></p>
+                            <h3 class="name_price">Cosmopolitan<span>9$</span></h3>
                             <p class="composition">Orange liqueur- 10 ml, cranberry juice- 30 ml,<br>
                                 lemon juice- 10 ml, vodka- 30 ml,<br>
                                 orange essential oil- 1 slice</p>
                         </li>
                         <li>
-                            <p class="name_price">Tequila Sunrise<span>10$</span></p>
+                            <h3 class="name_price">Tequila Sunrise<span>10$</span></h3>
                             <p class="composition">Tequila- 50 ml, orange juice- 150 ml, syrup Grenadine<br>
                                 (pomegranate syrup) v- 10 ml</p>
                         </li>
@@ -292,23 +292,23 @@
                 <div class="wrapper_coctails">
                     <ul class="price_list">
                         <li>
-                            <p class="name_price">Daiquiri<span>12$</span></p>
+                            <h3 class="name_price">Daiquiri<span>12$</span></h3>
                             <p class="composition">White rum- 40 ml, lemon juice- 20 ml, sugar syrup- 20 ml</p>
                         </li>
                         <li>
-                            <p class="name_price">Margarita<span>12$</span></p>
+                            <h3 class="name_price">Margarita<span>12$</span></h3>
                             <p class="composition">Tequila- 40 ml, orange liqueur- 20 ml, lemon juice - 20 ml</p>
                         </li>
                         <li>
-                            <p class="name_price">Martini Dry<span>10$</span></p>
+                            <h3 class="name_price">Martini Dry<span>10$</span></h3>
                             <p class="composition">Gin- 75 ml, dry vermouth- 15 ml, olive- 1</p>
                         </li>
                         <li>
-                            <p class="name_price">Screwdrive<span>8$</span></p>
+                            <h3 class="name_price">Screwdrive<span>8$</span></h3>
                             <p class="composition">Vodka- 50 ml, orange juice- 150 ml</p>
                         </li>
                         <li>
-                            <p class="name_price">Bloody Mary<span>11$</span></p>
+                            <h3 class="name_price">Bloody Mary<span>11$</span></h3>
                             <p class="composition">Vodka - 50 ml, tomato juice - 100 ml, lemon juice- 10 ml,<br>
                                 fresh celery- 10 g, watchester sauce- 5 drops, tabasco- 3<br>
                                 drops, salt, ground pepper</p>
