--- a/reservation.html
+++ b/reservation.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container_welcome">
-            <p class="welcome">Welcome</p>
+            <h1 class="welcome">Welcome</h1>
             <h1 class="welcome_heading">BOSCO reservation</h1>
             <span class="line_reservation"></span>
         </div>
@@ -36,7 +36,7 @@
 
     <main>
         <section class="container_gallery">
-            <h1 class="gallery_heading">Gallery</h1>
+            <h2 class="gallery_heading">Gallery</h2>
             <div class="wrapper_gallery">
                 <img src="images/restaurant_1.png" alt="inside" />
                 <img src="images/restaurant_2.png" alt="inside" />
@@ -58,13 +58,13 @@
 
         <section class="container_form">
             <div class="wrapper_form">
-                <h1 class="form_heading">Make a reservation</h1>
+                <h2 class="form_heading">Make a reservation</h2>
                 <span class="line_reservation line_indent"></span>
                 <form action="https://getform.io/f/390da523-9612-4f95-a1dd-fb42ab97a73c" class="form_font">
                     <div class="date_person">
                         <div class="date">
                             <label for="date">Date:</label>
-                            <input type="date" id="date" name="date_time" />
+                            <input type="datetime-local" id="date" name="date_time" />
                             <label for="date">The nearest date booking - 25 August.</label>
                         </div>
                         <div class="number_person">
